Fix Alert and Profile styling; Add useRef for Kebab Menu and Overflow scroll

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,6 +66,7 @@ body {
 	margin: 0;
 	padding: 0;
     overflow-x: hidden;
+    overflow-y: scroll;
     /* background-image: url('/img/background-diagonal.png'); */
     background-color: #ffffff;
 }
