--- a/src/css/account-content.module.scss
+++ b/src/css/account-content.module.scss
@@ -21,7 +21,7 @@
 
 .menu {
   position: sticky;
-  margin-top: -5px;
+  margin-top: 0px;
   margin-left: 20px;
   top: 50px;
   flex: 0 0 250px;
