--- a/src/css/pages.module.scss
+++ b/src/css/pages.module.scss
@@ -20,6 +20,10 @@
     padding: 20px 30px;
     border-radius: 8px;
     // margin-bottom: 26px;
+    h6{
+      font-size: 15pt;
+      font-weight: 500;
+    }
     p{
       color: #787879;
       span{
